src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>MAG_RN3_Subtotal__c</fullName>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <label>z_OBSOLETED_MAG RN3 Subtotal</label>
        <summarizedField>OpportunityLineItem.Product_Design_Win_Claim_Value_USD1__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.MAG_for_Roll_Up__c</field>
            <operation>equals</operation>
            <value>RN3</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG Concat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MN_Account_Id_Old__c</fullName>
        <description>MN previous Account Id</description>
        <label>MN Account Id Old</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Processor__c</fullName>
        <label>Mobile Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualcomm</fullName>
                </value>
                <value>
                    <fullName>Mediatek</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>HiSilicon</fullName>
                </value>
                <value>
                    <fullName>Nvidia</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Steps_History__c</fullName>
        <label>Next Steps History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <inlineHelpText>executive summary of steps needed to develop and close opportunity (for New Opportunity only)​</inlineHelpText>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_PM_Approvers__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is part of Opportunity/Opportunity Product fields phase-1 deletion. But unable to delete this fields as we are unable to delete the inactive approval processes in which this field is referenced as data is associated with them. So just renaming the field label to obsolete this field.</description>
        <label>z_OBSOLETED_Number of PM Approvers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Year_Pieces__c</fullName>
        <description>This field contains PROJECT_UNITS from Model N system.</description>
        <label>One Year Pieces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Amount__c</fullName>
        <description>Original Label before 1506:  Opp. Value</description>
        <inlineHelpText>Summary of all products&apos; [Prod. LT Value], which is life-time summary of the [Product Price] x [Product Component Multiplier] x [Life-time Total Yearly Pieces], in opportunity currency.
Lost Products are excluded from this calculation.</inlineHelpText>
        <label>z_OBSOLETED_Oppty LT Value</label>
        <summarizedField>OpportunityLineItem.LT_Value__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Prod_Lost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opp_Claim_Value_Thrust_only_USD__c</fullName>
        <formula>Product_DW_Claim_Value_Total__c - Opp_Design_Win_Claim_Value_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>[Opp. Claim Value incl. Thrust (USD)] 
subtracted by 
[Opp. Claim Value excl. Thrust (USD)]</inlineHelpText>
        <label>z_OBSOLETED_Opp. Claim Value Thrust USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Claim_Value_excl_Thrust__c</fullName>
        <description>THE FORMULA OF THIS FIELD IS TEMPORARY</description>
        <formula>Opp_Design_Win_Claim_Value_USD__c * Locked_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all Open/Won [Prod. Claim Value], which is summary thru SIP horizon of all [Yearly Piece] x [Sales Price] x [Component Multiplier]. 
This value uses opportunity currency</inlineHelpText>
        <label>z_OBSOLETED_Oppty Claim Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Design_Win_Claim_Value_USD__c</fullName>
        <description>Design win value in USD which is fixed with locked exchange rate when DW approved.
ORIGINAL LABEL before Release 1506: Opp. Design Win Claim Value (USD)</description>
        <inlineHelpText>Summary of all Open/Won [Prod. Claim Value (USD)], which is summary, thru SIP Horizon, of the (Product Price x Product Component Multiplier x Yearly Pieces) converted into USD</inlineHelpText>
        <label>z_OBSOLETED_Oppty Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Design_Win_Value_Thrust__c</fullName>
        <label>z_OBSOLETED_ Opp. Thrust DW Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_LT_Value_excl_Thrust_USD__c</fullName>
        <formula>Opp_Amount__c / Locked_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all products&apos; [Prod. LT Value], which is life-time summary of the [Product Price] x [Product Component Multiplier] x [Life-time Total Yearly Pieces]
This value is converted to USD.</inlineHelpText>
        <label>z_OBSOLETED_Oppty LT Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_90_Day_Maturity__c</fullName>
        <description>if opportunity created for 90+ days</description>
        <formula>IF( 
    AND(
        Days_since_Created_Date__c &lt; 90, 
        NOT(X90_Day_Maturity_Exception__c)
    ),
    IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;), 
    IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) 
)</formula>
        <inlineHelpText>Red Flag = Opportunity created less than 90 days 
Green Flag = Opportunity created more than 90 days 
Opportunity with any Red Flag is not allowed to submit for approval.</inlineHelpText>
        <label>Maturity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age_Start_Date__c</fullName>
        <description>This date is Read-Only and not exposed in the end user page layout.  This field is updated when a DW is moved from Initial Engagement to any of the other stages.</description>
        <inlineHelpText>The date/time this opportunity has been moved out of Initial Engagement stage</inlineHelpText>
        <label>Opportunity Age Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <description>Counting the Opportunity Age excluding stage Initial Discovery</description>
        <formula>IF (IsClosed, (Design_Win_Approval_Date__c - Opportunity_Age_Start_Date__c) , (TODAY() - Opportunity_Age_Start_Date__c))</formula>
        <inlineHelpText>The time span this opportunity has been moved out of Initial Engagement stage</inlineHelpText>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Full__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Min_Value_10K__c</fullName>
        <description>Opportunity DW Claim Values must be greater than or equal to $10,000 USD</description>
        <formula>IF(Claim_Value_USD__c &lt; 10000.0000, IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;), IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity DW Claim Values must be greater than or equal to $10,000 USD in order to submit an opportunity for approval.</inlineHelpText>
        <label>Min Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__LastOCPExport__c</fullName>
        <description>URL of last OrgChartPlus image export</description>
        <label>Last OCP Export</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Paper_slides_prepped_and_discussion_with__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>INIT - Paper Slides Prepped and Discusse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_CACC__c</fullName>
        <description>Parent Account CACC Code - for reporting</description>
        <formula>Account.Parent.NXP_Global_ID__r.Consolidated_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account CACC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_GID__c</fullName>
        <description>Parent Account NXP GID - for reporting</description>
        <formula>Account.Parent.NXP_GID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account GID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_ID_Text__c</fullName>
        <label>SYSTEM USED - Parent Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Region__c</fullName>
        <formula>TEXT( Account.Parent.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Segment_Approval__c</fullName>
        <formula>Account.Parent.Segment_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Segment Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_to_DW_Completion__c</fullName>
        <label>DW Completion %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>New field for STAR Account - SIR1174</description>
        <label>Platform</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probability_to_Win__c</fullName>
        <description>1607 Release SIR 1030 - Probability to Win &amp; Help Needed &amp; Description on Oppty Object</description>
        <inlineHelpText>80-100%, Include in Most Likely for Qtr;					
50-80%, Define what is needed to win this Qtr. Actively working to move to 80-100% cat. List actions needed to secure win this Qtr  in Help Needed;					
0-50%, Unlikely to close this Qtr. Not counted in Most</inlineHelpText>
        <label>z_OBSOLETED_Probability to Win</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>80% - 100%</fullName>
                </value>
                <value>
                    <fullName>50% - 80%</fullName>
                </value>
                <value>
                    <fullName>0% - 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_DW_Claim_Value_Total__c</fullName>
        <description>Original Label before 1506: Product DW Claim Value Total</description>
        <inlineHelpText>Summary of all Open/Won [Prod. Claim Value (USD)], which is summary, thru SIP Horizon, of the (Product Price x Product Component Multiplier x Yearly Pieces) converted into USD</inlineHelpText>
        <label>z_OBSOLETED_Opp. Claim Value (USD)</label>
        <summarizedField>OpportunityLineItem.Product_Thrust_Non_Thrust_DW_Value_USD__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Prod_Lost__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Status_Total__c</fullName>
        <label>Prod Status Total</label>
        <summarizedField>OpportunityLineItem.Product_Status__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <formula>IF(Product_Status_Total__c&gt;0, IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;), IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag will turn red if any of the product is or becomes inactive.</inlineHelpText>
        <label>Prod Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Thrust_Non_Thrust_DWCV_Total__c</fullName>
        <description>Product Thrust + Non Thrust Design Win Claim Value Total (USD)</description>
        <inlineHelpText>Sum( Opportunity_Product: Product Thrust+NonThrust DW Value )</inlineHelpText>
        <label>z_OBSOLETED_Prod. DWCV Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Date_Earlier_than_Close_Date__c</fullName>
        <description>if production date &lt; Close Date</description>
        <formula>OR( 
    Production_Date__c &lt; CloseDate, 
    Production_Date__c &lt;= TODAY()
)</formula>
        <label>Production Date Earlier than Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <inlineHelpText>Estimate the likely production date of this design win.</inlineHelpText>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Date_after_Close_Date__c</fullName>
        <description>Will turn red if production day before close date</description>
        <formula>IF(OR(ISPICKVAL(Design_Win_Approval_Process__c , &apos;Approved&apos;),ISPICKVAL(Design_Win_Approval_Process__c , &apos;Pending&apos;)),
IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) ,
IF( 
    AND(
        OR( 
            ISPICKVAL(Design_Win_Approval_Process__c , &apos;Open&apos;) , 
            ISPICKVAL(Design_Win_Approval_Process__c , &apos;Lost&apos;) ,
            ISPICKVAL(Design_Win_Approval_Process__c , &apos;Rejected&apos;)
        ) , 
        NOT( Production_Date_Earlier_than_Close_Date__c )
    ) ,
    IMAGE (&quot;/img/samples/flag_green.gif&quot;, &quot;GO&quot;) , 
    IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;STOP&quot;) 
)
)</formula>
        <inlineHelpText>Production date should be equal to or greater than close date and greater than today (Submission Date).</inlineHelpText>
        <label>Production Date not before Close Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Program</label>
        <referenceTo>OpportunityProgram__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>DISC - Project Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>This field contains program name from the Model N system.</description>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prototype_Required_Date__c</fullName>
        <description>Target date Prototype devices are required in the lab to begin system HW debug and validation work.</description>
        <inlineHelpText>Target date Prototype devices are required in the lab to begin system HW debug and validation work.</inlineHelpText>
        <label>Prototype Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Pre_Production_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order/ Pre-Production Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QSales_Cross_Selling__c</fullName>
        <formula>IF(NOT(ISBLANK(QSales_Oppty_Number__c)), TRUE, FALSE)</formula>
        <label>QSales Cross Selling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QSales_Oppty_Number__c</fullName>
        <label>QSales Oppty Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation Milestone</description>
        <label>RECO - Qual Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qual_Plan_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assessment Milestone</description>
        <label>ASSE - Qual Plan Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RC8_Marketing_Segment__c</fullName>
        <description>Marketing Segment Field for RC8
Controlling Field of &quot;RC8_Sub_Segment__c&quot;</description>
        <inlineHelpText>For RC8 Only</inlineHelpText>
        <label>z_OBSOLETED_Marketing Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NFC Readers</fullName>
                </value>
                <value>
                    <fullName>SMR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC8_Sub_Segment__c</fullName>
        <description>Dependent Field of &quot;RC8_Marketing Segment__c&quot;</description>
        <inlineHelpText>For RC8 Only</inlineHelpText>
        <label>z_OBSOLETED_Marketing Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RC8_Marketing_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Transport Ticketing</fullName>
                </value>
                <value>
                    <fullName>Adjacent Mobility Services</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Micropayments</fullName>
                </value>
                <value>
                    <fullName>Payments (POS/mPOS)</fullName>
                </value>
                <value>
                    <fullName>Computing</fullName>
                </value>
                <value>
                    <fullName>STB (Pay TV)</fullName>
                </value>
                <value>
                    <fullName>Gaming/Toys</fullName>
                </value>
                <value>
                    <fullName>Payments (eMetering)</fullName>
                </value>
                <value>
                    <fullName>AFC</fullName>
                </value>
                <value>
                    <fullName>Mass Market</fullName>
                </value>
                <value>
                    <fullName>eGovernment</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Others Infra.</fullName>
                </value>
                <value>
                    <fullName>Access Management</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Device Pairing</fullName>
                </value>
                <value>
                    <fullName>Others CI</fullName>
                </value>
                <value>
                    <fullName>Smart Media</fullName>
                </value>
                <value>
                    <fullName>Inventory and Supply Chain Efficiency</fullName>
                </value>
                <value>
                    <fullName>Brand Protection</fullName>
                </value>
                <value>
                    <fullName>Livestock Management</fullName>
                </value>
                <value>
                    <fullName>Big data storage LTO</fullName>
                </value>
                <value>
                    <fullName>Secure Asset Tagging</fullName>
                </value>
                <value>
                    <fullName>Others RFID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonWon_Description__c</fullName>
        <description>Reason Won Description</description>
        <inlineHelpText>executive summary of why NXP won the opportunity (for DW Approval only)</inlineHelpText>
        <label>Reason Won Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Won__c</fullName>
        <description>Add Reason Won to opportunity</description>
        <inlineHelpText>Please provide a Reason Won for this Opportunity for tracking purposes</inlineHelpText>
        <label>Reason Won</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Production Capacity</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Time to Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reco_Comm_Prob__c</fullName>
        <formula>Account.Parent.PROBABILITY_Recommendation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the probability of an opportuntiy reaching the Commitment stage for this parent account. Is applies to all opportunties upon creation or change of stage. Calculated yearly based on 2 years history.</inlineHelpText>
        <label>Reco Comm Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reference_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if this design win is a Reference Design</inlineHelpText>
        <label>Reference Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_MPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Reference Design this Tier-1 opportunity is referencing to.</inlineHelpText>
        <label>Reference MPO</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Reference MPO must be a reference design</errorMessage>
            <filterItems>
                <field>Opportunity.Reference_Design__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Multi-Party Opportunities (MPO)</relationshipLabel>
        <relationshipName>Tier_1_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z_OBSOLETED_Refresh Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_VP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesFJpr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_by__c</fullName>
        <label>Approved or Rejected By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_date__c</fullName>
        <description>Give the field to show when the Opp DW is disapproved.</description>
        <inlineHelpText>The date when the approval has been rejected last time</inlineHelpText>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Opp_DW_Claim_Value__c</fullName>
        <formula>Opp_Design_Win_Claim_Value_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>z_OBSOLETED_ Report - Opp DW Claim Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Director_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to capture Sales Director approver for opportunity</description>
        <label>Sales Director Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesF8rX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Date__c</fullName>
        <label>Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sampled_to_Dev_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>DISC - Sampled to Dev Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sampled_to_Proto_Build__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assessment Milestone</description>
        <label>ASSE - Sampled to Proto Build</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Samples_available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discovery Milestone</description>
        <label>DISC - Samples Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schematic_Close_Date__c</fullName>
        <description>Rel 1701 SFDC-188 Schematic Close Date</description>
        <inlineHelpText>The planned or actual date when the Schematic Diagram will be or has been completed. The schematic should provide the detailed, complete explanations of the parts that the customer system holds, as well as how they are connected.</inlineHelpText>
        <label>Schematic Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_up_on_MPS_IO_File_12_16_weeks_be__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recommendation Milestone</description>
        <label>RECO - Show Up on MPS / IO File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Opportunity_Id__c</fullName>
        <description>SIR 647, used for FSL data migration.</description>
        <label>Siebel Oppty ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spin_Off_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spin Off Oppty</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Spin Off Opportunity</relationshipLabel>
        <relationshipName>Spin_Off_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_contact_window_identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initial Engagement Milestone</description>
        <label>INIT - Contact Window Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Segment__c</fullName>
        <label>Industry Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Factory Automation</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Building Control</fullName>
                </value>
                <value>
                    <fullName>Test &amp; Measurement</fullName>
                </value>
                <value>
                    <fullName>Medical Electronics</fullName>
                </value>
                <value>
                    <fullName>Power &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>Home Appliances</fullName>
                </value>
                <value>
                    <fullName>Wearable &amp; Fitness</fullName>
                </value>
                <value>
                    <fullName>Toys and Gaming</fullName>
                </value>
                <value>
                    <fullName>Home Audio Video</fullName>
                </value>
                <value>
                    <fullName>Voice &amp; Music</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>ADAS</fullName>
                </value>
                <value>
                    <fullName>Infotainment &amp; connectivity</fullName>
                </value>
                <value>
                    <fullName>Powertrain</fullName>
                </value>
                <value>
                    <fullName>Chassis &amp; Safety</fullName>
                </value>
                <value>
                    <fullName>Body &amp; Convenience</fullName>
                </value>
                <value>
                    <fullName>Other Automotive</fullName>
                </value>
                <value>
                    <fullName>Computers</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Point-of-Sale</fullName>
                </value>
                <value>
                    <fullName>Retail and Logistics</fullName>
                </value>
                <value>
                    <fullName>RFID Transit, Access and Identification</fullName>
                </value>
                <value>
                    <fullName>Enterprise Servers</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Other DP</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Broadband Access/ Home Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>